kubernetes/apps/home/home-assistant/app/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: home-assistant
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: home-assistant-app
  httpUpgrade:
    - type: websocket
  tcpKeepalive:
    idleTime: 60s
    interval: 30s
    probes: 5
