kubernetes/apps/home/home-assistant/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    external-dns.home.arpa/enabled: "true"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "hass.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: home-assistant-app
          port: 8123
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-code
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "hass-code.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: home-assistant-code
          port: 8081
